--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dbcontacts
+spring.datasource.url=jdbc:mysql://formation-devops.ckf3jpdmmg7o.us-east-2.rds.amazonaws.com:3306/dbcontacts
 spring.datasource.username=root
-spring.datasource.password=zizo6226
+spring.datasource.password=Zizo6226
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
